--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 <button type="button" class="profit__btn">Узнать стоимость</button>
         </section>
 
-
+<section class="opacity_zero"></section>
         <section><a name="potential"></a>
             <h3 class="h__title">Что вы <span class="light">получаете?</span></h3>
             <div class="potential__container">
