--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style\footer.css">
     <link rel="stylesheet" href="style\form.css">
     <link rel="stylesheet" href="style\prize.css">
+    <link rel="stylesheet" href="style/normalize.css"
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
