--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </header>
  
     
-        <menu><div class="overlay"></div><div class="submenu">
+        <menu><div class="overlay"><div class="submenu">
             <div class="submenu__link-cont"><li class="submenu__link"><a href="#">Главная</a></li>
             <li class="submenu__link"><a href="#main" style="padding: 0;">Интернет-магазины, которые продают</a></li>
             <li class="submenu__link"><a href="#potential">Что вы получаете</a></li>
@@ -57,6 +57,7 @@
             
         </div></div>
         <div class="close">+</div>
+        </div>
         </menu>
         <dialog class="modal" close>
             <form name="forma" action="" autocomplete="on" class="modal__form">
