--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                 <div class="section__container-text">
                     <div class="section__title">Компания Millenium-</div>
                     <div class="section__text">
-                        <p>Это дорогая и долгая разработка интернет-магазинов на 1С Битрикс! Нельзя сделать качестввенный цифровой продукт за дешево и быстро!</p>
+                        <p>Это дорогая и долгая разработка интернет-магазинов на 1С Битрикс! Нельзя сделать <span class="bald">качественный</span> цифровой продукт за дешево и быстро!</p>
                         <p>Мы создадим интернет-магазин с нуля. Заказчику не придется искать других IT-специалистов для дальнейшей настройки и запуска сайта. Мы настроим сервисы, интегрируем модули для онлайн-торговли, добавим контент и товары. Работы по созданию интернет-магазина с нуля ведутся только после анализа ниши бизнеса.</p>
                     </div>
                 </div>
